Select Month button is dark and not visible on the back end

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,4 +70,7 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+  .dark input[type="date"], .dark input[type="month"] {
+    color-scheme: dark;
+  }
 }
